observability/kube-prometheus/manifests/kube-controller-manager-prometheus-discovery.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-controller-manager-prometheus-discovery
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-controller-manager
spec:
  clusterIP: None
  ports:
  - name: https-metrics
    port: 10257
    targetPort: 10257
  selector:
    component: kube-controller-manager
