observability/kube-prometheus/manifests/kube-scheduler-prometheus-discovery.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-scheduler-prometheus-discovery
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-scheduler
spec:
  clusterIP: None
  ports:
  - name: https-metrics
    port: 10259
    targetPort: 10259
  selector:
    component: kube-scheduler
